force-app/main/default/objects/Account/fields/Account_activation_summary__c.field-meta.xml
<CustomField>
    <fullName>Account_activation_summary__c</fullName>
    <label>Account activation summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>