force-app/main/default/objects/Account/fields/Account_Id_Org_B__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_Org_B__c</fullName>
    <label>Account_Id_Org_B</label>
    <length>20</length>
    <type>Text</type>
</CustomField>