force-app/main/default/objects/Account/fields/count_of_opp__c.field-meta.xml
<CustomField>
    <fullName>count_of_opp__c</fullName>
    <label>count of opp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>