force-app/main/default/objects/Account/fields/no_of_opp__c.field-meta.xml
<CustomField>
    <fullName>no_of_opp__c</fullName>
    <label>no.of opp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>