force-app/main/default/objects/Account/validationRules/Active_summary.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_summary</fullName>
    <active>true</active>
    <errorConditionFormula>Active__c == true &amp;&amp; Account_activation_summary__c == null</errorConditionFormula>
    <errorDisplayField>Account_activation_summary__c</errorDisplayField>
    <errorMessage>Account activation summary is required</errorMessage>
</ValidationRule>